--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,10 @@ jobs:
       max-parallel: 4
       fail-fast: false
       matrix:
-        vm-os: [ubuntu-latest]
-        go-version: [1.14]
-        # vm-os: [ubuntu-latest, macOS-latest, windows-latest]
-        # go-version: [1.12.17, 1.13.8, 1.14]
+        # vm-os: [ubuntu-latest]
+        # go-version: [1.14]
+        vm-os: [ubuntu-latest, macOS-latest, windows-latest]
+        go-version: [1.12.17, 1.13.8, 1.14]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
